# swc_plugin_react_generate_property

./: Cargo.toml  index.js  package.json  swc_plugin_react_generate_property.wasm
src/: lib.rs
