[package]
name = "swc_plugin_react_generate_property"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = "1"
regex = "1"
pathdiff = "0.2"
swc_core = { version = "43.0.*", features = [
  "ecma_plugin_transform",
  "ecma_visit",
  "ecma_ast",
  "ecma_utils",
  "ecma_quote",
  "common",
] }
serde_json = "1"

# .cargo/config.toml defines few alias to build plugin.
# cargo build-wasip1 generates wasm32-wasip1 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
